# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml  pyci.yml 
static/: staticfiles.json
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: test_user.json
task_manager/included_apps/users/: views.py
task_manager/labels/: views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  views.py
task_manager/tasks/: filters.py  models.py  views.py
task_manager/templates/: base.html  create_user.html  index.html  login.html  navbar.html
task_manager/templates/statuses/: create.html  delete.html  statuses_list.html  update.html
task_manager/templates/tasks/: show_one_task.html
task_manager/templates/users/: create.html  delete.html  update.html  user_create.html  users_list.html
task_manager/tests/: tests.py  tests_labels.py  tests_statuses.py  tests_tasks.py
task_manager/users/: forms.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: tests.py
