[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["anna_petukhova <aniuta.petuhova2013@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/AniutaP/python-project-52"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console"
]
packages = [
    {include = "task_manager"}
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^4.2.7"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
django-bootstrap5 = "^23.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
